# daily-hex-puzzle

./: .gitignore  README.md
.github/workflows/: release.yml
android-client/: CMakeLists.txt  HexBackend.cpp  HexBackend.h  HexBoardCanvas.qml  HexSolverWorker.cpp  HexSolverWorker.h  Main.qml  main.cpp
android-client/android/: AndroidManifest.xml  build.gradle
qt-client/: .gitignore  CMakeLists.txt  appicon.h  build.bat  build.sh  gen_icon.ps1  gen_icon.py  hexboardwidget.cpp  hexboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  solverworker.cpp  solverworker.h
solver-ffi/: CMakeLists.txt  hex_solver.c  hex_solver.h
